[package]
name = "livox"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"
#build = "build.rs"
#links = "livox_sdk_static"

[dependencies]
#libc = "0.2.0"
livox-sys = "0.1.0"
byteorder = "1.3.1"
lazy_static = "1.3.0"
num-traits = "0.2.0"
num-derive = "0.2.5"

[dev-dependencies]
palette = "0.4"
chrono = "0.4.7"

[dev-dependencies.las]
path = "/home/lane/Downloads/las-rs"
features = ["laz"]
