[package]
name = "livox"
description = "An (unofficial) library to pull data from Livox devices"
license = "MIT"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

[dependencies]
livox-sys = "0.1.1"
byteorder = "1.3.1"
lazy_static = "1.3.0"
num-traits = "0.2.0"
num-derive = "0.2.5"

[dev-dependencies]
palette = "0.4"
chrono = "0.4.7"
las = "0.7.0"
